Changes are completed

--- a/Simple.html
+++ b/Simple.html
@@ -2,6 +2,6 @@
   <head>
   </head>
   <body>
-    <h1 text-align="center">Welcome Indu Kakarla</h1>
+    <h1 style="text-align:center">Welcome Indu Kakarla</h1>
   </body>
 </html>
